# Dvandva

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  product.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit  prepare-commit-msg
adversarial-loop/: README.md
adversarial-loop/hooks/: gate-cli.sh  gate.sh
adversarial-loop/lib/: predicate.sh
adversarial-loop/schema/: evidence.schema.json  goal.schema.json
adversarial-loop/skill/: SKILL.md
adversarial-loop/tests/: gate_test.sh  template_smoke_test.sh
docs/: dvandva-explainer.html  index.html  model-selection.md
journal/: 2026-05-12-setup.md
rust/: Cargo.toml
rust/dvandva/: Cargo.toml  README.md
rust/dvandva-core/: Cargo.toml  README.md
rust/dvandva-core/src/: baton.rs  lib.rs  resolve.rs  state.rs
rust/dvandva/src/: baton.rs  baton_guard.rs  brief.rs  commit_gate.rs  drift_lint.rs  emit.rs  gitcfg.rs  hook_preflight.rs  hooks.rs  install_hooks.rs  installers.rs  lib.rs  lock.rs  main.rs  next.rs  preflight.rs  provenance.rs  resolve.rs  retire.rs  reverify.rs  rite | wait | snapshot|&|  session_marker.rs  sla_marker.rs  smoke.rs  snapshot.rs  state.rs  stop_guard.rs  upgrade.rs  upgrade_txn.rs  upgrade_txn_engines.rs  util.rs  versions.rs  wait.rs  watchdog.rs  write.rs
rust/dvandva/src/cmd/: baton_guard.rs  brief.rs  commit_gate.rs  drift_lint.rs  git_hook.rs  hook_preflight.rs  install.rs  install_codex.rs  install_hooks.rs  lint.rs  mod.rs  next.rs  preflight.rs  resolve.rs  retire.rs  smoke.rs  snapshot.rs  state.rs  stop_guard.rs  upgrade.rs  wait.rs  watchdog.rs  write.rs
rust/dvandva/src/lint/: artifacts.rs  mod.rs  phase4_research.rs  protocol_phase1.rs  run3_dynamic_agents.rs  run4_path_gates.rs  run4_standalone_agents.rs  schema_parity.rs  skill_phase3.rs  skills.rs  stale_version_ref.rs
rust/dvandva/src/workflow/: invariants.rs  mod.rs  presets.rs  shape.rs
rust/dvandva/tests/: baton_guard.rs  brief.rs  cli.rs  commit_gate.rs  delta_reverification.rs  drift_lint.rs  hook_preflight.rs  install.rs  install_codex.rs  install_hooks.rs  lint_artifacts.rs  lint_skills.rs  lint_stale_version_ref.rs  lints.rs  next.rs  preflight.rs  retire.rs  skill_preflight.rs  smoke.rs  snapshot.rs  stop_guard.rs  upgrade.rs  upgrade_txn.rs  v3_read_path.rs  wait.rs  watchdog.rs  workflow_golden.rs  workflow_interpreter.rs  workflow_invariants.rs  workflow_shape.rs  write_lock.rs  write_paths.rs  write_schema.rs  write_transitions.rs  write_workflow.rs  write_workflow_declaration.rs
rust/dvandva/tests/common/: mod.rs
scripts/: dvandva-commit-gate.sh  dvandva-drift-lint.sh  dvandva-hook-preflight.sh  dvandva-wait.sh  install-codex.sh  install-dvandva-hooks.sh  install.sh  lint-artifacts.sh  lint-phase4-research.sh  lint-protocol-phase1.sh  lint-run3-dynamic-agents.sh  lint-run4-path-gates.sh  lint-run4-standalone-agents.sh  lint-rust.sh  lint-skill-phase3.sh  lint-skills.sh  retire-standalone-agents.sh  smoke-plugin-install.sh  test-dvandva-commit-gate.sh  test-dvandva-hook-preflight.sh  test-dvandva-preflight.sh  test-dvandva-resolve.sh  test-dvandva-skill-preflight.sh  test-dvandva-snapshot.sh  test-dvandva-state.sh  test-dvandva-wait.sh  test-dvandva-write.sh  test-install-codex.sh  test-install.sh  test-lint-artifacts.sh  test-lint-run3-dynamic-agents.sh  test-lint-run4-path-gates.sh  test-lint-run4-standalone-agents.sh  test-lint-skills.sh  test-retire-standalone-agents.sh  test-run2-skill-absorption.sh  test-rust-parity.sh
(+87 files in other folders)
