[package]
name = "dvandva-core"
version = "2.0.0-alpha.1"
edition = "2021"
description = "Core library for the dvandva multi-agent coordination engine (read path: baton model, emit policy, resolve, state projection)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/axatbhardwaj/Dvandva"
readme = "README.md"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "arbitrary_precision"] }
