[package]
name = "dvandva"
version = "3.4.0"
edition = "2021"
description = "A governed-loop protocol for adversarial AI pairs. Each run declares its own peer-approved workflow graph — validated against five locked invariants — instead of a frozen state machine. Multicall binary for two-role (vadi/prativadi) coordination over a JSON baton: graph interpreter, class-driven waits, preflights, git gates, installers, and lints. No daemon, no orchestrator."
license = "MIT OR Apache-2.0"
repository = "https://github.com/axatbhardwaj/Dvandva"
readme = "README.md"
keywords = ["cli", "multi-agent", "coordination", "baton"]
categories = ["command-line-utilities"]

[lib]
name = "dvandva"
path = "src/lib.rs"

[[bin]]
name = "dvandva"
path = "src/main.rs"

[dependencies]
notify = "8.2.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "arbitrary_precision"] }
time = { version = "0.3.53", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.27.0"
