[package]
name = "dvandva"
version = "3.4.2"
edition = "2021"
description = "Retired and archived. A historical learning experiment in governed agent loops, subagent delegation, review gates, and two-agent coordination for Claude Code and Codex."
license = "MIT OR Apache-2.0"
repository = "https://github.com/axatbhardwaj/Dvandva"
readme = "README.md"
keywords = ["cli", "multi-agent", "coordination", "baton"]
categories = ["command-line-utilities"]

[lib]
name = "dvandva"
path = "src/lib.rs"

[[bin]]
name = "dvandva"
path = "src/main.rs"

[dependencies]
notify = "8.2.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order", "arbitrary_precision"] }
time = { version = "0.3.53", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.27.0"
